# CPSMPlongees

./: .gitignore  .gitmodules  README.md
.github/PULL_REQUEST_TEMPLATE/: release_pr.md
CPSMPlongees/: CMakeLists.txt  Constants.cpp  Constants.hpp  LoggerHandler.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ProgResources.qrc  ProgramInterrupts.hpp  main.cpp
CPSMPlongees/Gui/: CustomCheckBoxes.cpp  CustomCheckBoxes.hpp  DialogConfirmListDeletion.cpp  DialogConfirmListDeletion.hpp  DialogConfirmListDeletion.ui  DiveDetails.cpp  DiveDetails.hpp  DiveDetails.ui  DiveEdit.cpp  DiveEdit.hpp  DiveEdit.ui  DiveSearch.cpp  DiveSearch.hpp  DiveSearch.ui  DiverEdit.cpp  DiverEdit.hpp  DiverEdit.ui  DiverSearch.cpp  DiverSearch.hpp  DiverSearch.ui  DivingTypeDelegate.cpp  DivingTypeDelegate.hpp  GuiUtils.cpp  GuiUtils.hpp  LineEditUpperCase.hpp  ReversedTristateCheckBox.cpp  ReversedTristateCheckBox.hpp
CPSMPlongees/Libs/: CMakeLists.txt
CPSMPlongees/Libs/CPSMDBTools/: CMakeLists.txt  CPSMDatabase.cpp  CPSMDatabase.hpp  DBMigration.cpp  DBMigration.hpp  DBScripts.qrc  RawStructs.cpp  RawStructs.hpp  tmp.hpp
CPSMPlongees/Libs/CPSMDBTools/DBScripts/: CreateDB.sql  FillTestDB.sql  SetupTriggers.sql  TestRq.sql
CPSMPlongees/Libs/CPSMGlobals/: CMakeLists.txt  CPSMGlobals.hpp  CpsmGlobalConfiguration.hpp  CpsmGlobalConfiguration.hpp.in  Utils.hpp
CPSMPlongees/Libs/CPSMTools/: CMakeLists.txt
CPSMPlongees/Libs/DBTools/: CMakeLists.txt  DBFormatting.hpp  DBSaver.cpp  DBSaver.hpp  DBStatic.hpp  DBUtils.hpp  Database.cpp  Database.hpp  local.cpp
CPSMPlongees/Libs/Logger/: CMakeLists.txt
CPSMPlongees/Libs/Logger/include/Logger/: btype.hpp  logger.hpp  logger_setup.hpp  qstring_callback_sink.hpp
CPSMPlongees/Libs/Logger/src/: constants.hpp
CPSMPlongees/Libs/Proto/: CMakeLists.txt  CPSMProto.hpp  CPSMProtoDefaults.hpp
CPSMPlongees/Libs/Utils/: CMakeLists.txt
CPSMPlongees/Libs/Utils/include/Utils/: AsyncFileCopyer.hpp  chrono.hpp  list_filters.hpp
CPSMPlongees/Libs/Utils/src/: AsyncFileCopyer.cpp
CPSMPlongees/Models/: DiveDetailsViewModel.cpp  DiveDetailsViewModel.hpp  DiveEditMembers.cpp  DiveEditMembers.hpp  DiveEditNonMembers.cpp  DiveEditNonMembers.hpp  DiversViewModel.cpp  DiversViewModel.hpp  DivesViewModel.cpp  DivesViewModel.hpp  DivesViewModelForDiverEdit.cpp  DivesViewModelForDiverEdit.hpp  table_model_test.cpp  table_model_test.hpp
CPSMPlongees/Tests/: CMakeLists.txt  TestsRc.qrc  db_backup_tests.cpp  db_migration.cpp  db_tests.cpp  main.cpp  test_common.hpp
CPSMPlongees/Tests/Rc/: ClearDB.sql  FillTestDB.sql
DBeaver/: .project  template
DBeaver/.dbeaver/: .project-metadata.json.bak  data-sources.json  project-metadata.json  project-settings.json
DBeaver/Diagrams/: BaseProject.erd
DBeaver/Scripts/: Script-1.sql  Script-2.sql  Script-3.sql  Script-4.sql  Script.sql
Deployment/: buildSetup.iss  deploy.py  manifest.json
